# PybindCourse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  course.org  setup.py
src/: library.cpp  library.hpp  library_2_named.cpp  library_2_named.hpp  main.cpp  pybind.cpp  pybind.named.cpp  pybind_1_opaque.cpp  pybind_3_classes.cpp
src/barbadoop/: __init__.py
